--- a/MilkyWayApp/MilkyWayApp.csproj
+++ b/MilkyWayApp/MilkyWayApp.csproj
@@ -62,6 +62,7 @@
     <None Include="GettingStarted.Xamarin" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
+    <AndroidResource Include="Resources\layout\Camera.axml" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Main.axml">
