--- a/MilkyWayApp/Properties/AndroidManifest.xml
+++ b/MilkyWayApp/Properties/AndroidManifest.xml
@@ -1,5 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="MilkyWayApp.MilkyWayApp" android:versionCode="1" android:versionName="1.0">
   <uses-sdk android:minSdkVersion="16" />
+  <!--
+  tutorial on camera:
+    https://developer.xamarin.com/recipes/android/other_ux/camera_intent/take_a_picture_and_save_using_camera_app/
+  
+  CAMERA and WRITE_EXTERNAL_STORAGE permissions for Camera
+  -->
+  
+  <uses-permission android:name="android.permission.CAMERA" />
+  <uses-permission android:name="android.hardware.camera.autofocus" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  
   <application android:label="MilkyWayApp"></application>
 </manifest>
